<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".DetailWeather">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/WholeAppTheme">


        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appBackground"
            app:navigationIcon="@drawable/arrow_left"
            app:title="@null"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appBackground"
            app:tabIndicatorHeight="0dp">

            <android.support.design.widget.TabItem
                android:id="@+id/tabToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_today"
                android:icon="@drawable/tab_today" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_weekly"
                android:icon="@drawable/tab_weekly"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tabPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_photos"
                android:icon="@drawable/tab_photos"/>
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/detail_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>